fixing navlinks alignment for mobile

--- a/styles/filter.css
+++ b/styles/filter.css
@@ -157,7 +157,8 @@
     color: #FAFAFA;
     border: none;
     border-radius: 0.3rem;
-    font-size: 1rem;
+    font-size: 1.05rem;
+    text-transform: uppercase;
     font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease;
